--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,40 @@
 /*  your css code here. If applicable */
+
+* {
+	padding : 0;
+	margin : 0;
+}
+
+.hero {
+	width : 100%;
+	display : flex;
+	justify-content : flex-start;
+	align-items : center;
+}
+
+div img {
+	width : 800px;
+	height : 400px;
+}
+
+.container-2 {
+	text-align : center;
+	padding : 20px;
+}
+
+.container-2 p {
+	padding : 10px;
+}
+
+button {
+	background-color : #ff0000;
+	padding : 8px;
+	border : none;
+	border-radius : 5px;
+}
+
+a {
+	text-decoration : none;
+	color : white;
+}
+
